# rmb_helper

./: .gitignore  README.md  main.py  pyproject.toml  任免表工具箱.spec
app/core/: compare_rules.py  compat_processor.py  converters.py  dmgrp_loader.py  docx_exporter.py  excel_exporter.py  excel_handler.py  file_assoc.py  lrmx.py  pdf_exporter.py  result_exporter.py  single_instance.py  verify_handler.py
app/resources/: DmGrp.xml  family_template.xlsx  template.docx
app/ui/: main_window.py  style.py  utils.py  workers.py
app/ui/tabs/: compat_tab.py  convert_tab.py  editor_tab.py  family_tab.py  settings_tab.py  update_tab.py  verify_tab.py
app/ui/widgets/: family_table.py  field_mapping.py  file_panel.py  flow_layout.py  loading_overlay.py  lrmx_tree.py  photo_widget.py  print_preview.py  update_log.py  verify_result.py
app/utils/: naming.py
docs/superpowers/plans/: 2026-06-12-rmb-helper-mvp.md  2026-06-16-batch-verify.md  2026-06-16-export-verify-results.md  2026-06-16-merge-update-verify-tab.md  2026-06-17-shared-file-panel.md  2026-06-18-batch-performance.md  2026-06-22-editor-enhancement.md  2026-06-23-compare-rules.md  2026-06-24-engineering-refactor.md  2026-06-25-lrmx-to-excel-update.md
docs/superpowers/specs/: 2026-06-12-rmb-helper-design.md  2026-06-16-export-verify-results-design.md  (+9 more)
docx2pdf/: pom.xml
tests/: conftest.py  test_compare_rules.py  test_converters.py  test_docx_exporter.py  test_excel_handler.py  test_excel_handler_export.py  test_lrmx.py  test_naming.py  test_pdf_exporter.py  test_result_exporter.py  test_verify_handler.py
(+3 files in other folders)
